Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17801

Galera test failure on galera_var_reject_queries

    XMLWordPrintable

Details

    Description

      jan@jan-laptop-asus:~/mysql/10.2-sst/mysql-test$ ./mtr galera.galera_var_reject_queries --ddd
      Logging: ./mtr  galera.galera_var_reject_queries --ddd
      vardir: /home/jan/mysql/10.2-sst/mysql-test/var
      Checking leftover processes...
      Removing old var directory...
      Creating var directory '/home/jan/mysql/10.2-sst/mysql-test/var'...
      Checking supported features...
      MariaDB Version 10.2.20-MariaDB-debug
       - SSL connections supported
       - binaries are debug compiled
      Collecting tests...
      Installing system database...
       
      ==============================================================================
       
      TEST                                      RESULT   TIME (ms) or COMMENT
      --------------------------------------------------------------------------
       
      worker[1] Using MTR_BUILD_THREAD 300, with reserved ports 16000..16019
      galera.galera_var_reject_queries 'innodb' [ fail ]
              Test ended at 2018-11-22 12:22:12
       
      CURRENT_TEST: galera.galera_var_reject_queries
      mysqltest: At line 42: query 'SELECT COUNT(*) = 1 FROM t1' failed: 2013: Lost connection to MySQL server during query
       
      The result from queries just before the failure was:
      < snip >
      SET GLOBAL wsrep_reject_queries = ALL;
      SELECT * FROM t1;
      ERROR 08S01: WSREP has not yet prepared node for application use
      SET GLOBAL wsrep_reject_queries = ALL_KILL;
      ERROR HY000: Lost connection to MySQL server during query
      connection node_1a;
      SELECT * FROM t1;
      Got one of the listed errors
      connect node_1b, 127.0.0.1, root, , test, $NODE_MYPORT_1;
      SELECT * FROM t1;
      ERROR 08S01: WSREP has not yet prepared node for application use
      connection node_2;
      SELECT VARIABLE_VALUE = 2 FROM INFORMATION_SCHEMA.GLOBAL_STATUS WHERE VARIABLE_NAME = 'wsrep_cluster_size';
      VARIABLE_VALUE = 2
      1
      INSERT INTO t1 VALUES (1);
      connect node_1c, 127.0.0.1, root, , test, $NODE_MYPORT_1;
      SET GLOBAL wsrep_reject_queries = NONE;
      SELECT COUNT(*) = 1 FROM t1;
       
      More results from queries before failure can be found in /home/jan/mysql/10.2-sst/mysql-test/var/log/galera_var_reject_queries.log
       
       
      Server [mysqld.1 - pid: 5323, winpid: 5323, exit: 0] failed during test run
      Server log from this test:
      ----------SERVER LOG START-----------
      2018-11-22 12:20:37 140737327568832 [Note] WSREP: Read nil XID from storage engines, skipping position init
      2018-11-22 12:20:37 140737327568832 [Note] WSREP: wsrep_load(): loading provider library '/usr/lib/galera/libgalera_smm.so'
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: wsrep_load(): Galera 3.24(rXXXX) by Codership Oy <info@codership.com> loaded successfully.
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: CRC-32C: using hardware acceleration.
      2018-11-22 12:20:38 140737327568832 [Warning] WSREP: Could not open state file for reading: '/home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data//grastate.dat'
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Found saved state: 00000000-0000-0000-0000-000000000000:-1, safe_to_bootstrap: 1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Passing config to GCS: base_dir = /home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data/; base_host = 127.0.0.1; base_port = 16002; cert.log_conflicts = no; debug = no; evs.auto_evict = 0; evs.delay_margin = PT1S; evs.delayed_keep_period = PT30S; evs.inactive_check_period = PT0.5S; evs.inactive_timeout = PT30S; evs.install_timeout = PT15S; evs.join_retrans_period = PT1S; evs.max_install_timeouts = 3; evs.send_window = 4; evs.stats_report_period = PT1M; evs.suspect_timeout = PT10S; evs.user_send_window = 2; evs.view_forget_timeout = PT24H; gcache.dir = /home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data/; gcache.keep_pages_size = 0; gcache.mem_size = 0; gcache.name = /home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data//galera.cache; gcache.page_size = 128M; gcache.recover = no; gcache.size = 10M; gcomm.thread_prio = ; gcs.fc_debug = 0; gcs.fc_factor = 1.0; gcs.fc_limit = 16; gcs.fc_master_slave = no; gcs.max_packet_size = 64500; gcs.max_throttle = 0.25; gcs.recv_q_hard_limit = 9223372036854775807; 
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: GCache history reset: 00000000-0000-0000-0000-000000000000:0 -> 00000000-0000-0000-0000-000000000000:-1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Assign initial position for certification: -1, protocol version: -1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: wsrep_sst_grab()
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Start replication
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Setting initial position to 00000000-0000-0000-0000-000000000000:-1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: protonet asio version 0
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Using CRC-32C for message checksums.
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: backend: asio
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: gcomm thread scheduling priority set to other:0 
      2018-11-22 12:20:38 140737327568832 [Warning] WSREP: access file(/home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data//gvwstate.dat) failed(No such file or directory)
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: restore pc from disk failed
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: GMCast version 0
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: (41caec63, 'tcp://0.0.0.0:16002') listening at tcp://0.0.0.0:16002
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: (41caec63, 'tcp://0.0.0.0:16002') multicast: , ttl: 1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: EVS version 0
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: gcomm: connecting to group 'my_wsrep_cluster', peer ''
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: start_prim is enabled, turn off pc_recovery
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Node 41caec63 state prim
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: view(view_id(PRIM,41caec63,1) memb {
      	41caec63,0
      } joined {
      } left {
      } partitioned {
      })
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: save pc into disk
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: gcomm: connected
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Changing maximum packet size to 64500, resulting msg size: 32636
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Shifting CLOSED -> OPEN (TO: 0)
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Opened channel 'my_wsrep_cluster'
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: New COMPONENT: primary = yes, bootstrap = no, my_idx = 0, memb_num = 1
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: Waiting for SST to complete.
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Starting new group from scratch: 41ccaacd-ee40-11e8-adb7-cbbaa84dad15
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: STATE_EXCHANGE: sent state UUID: 41ccae68-ee40-11e8-84ed-12f559052639
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: STATE EXCHANGE: sent state msg: 41ccae68-ee40-11e8-84ed-12f559052639
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: STATE EXCHANGE: got state msg: 41ccae68-ee40-11e8-84ed-12f559052639 from 0 (jan-laptop-asus)
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Quorum results:
      	version    = 4,
      	component  = PRIMARY,
      	conf_id    = 0,
      	members    = 1/1 (joined/total),
      	act_id     = 0,
      	last_appl. = -1,
      	protocols  = 0/9/3 (gcs/repl/appl),
      	group UUID = 41ccaacd-ee40-11e8-adb7-cbbaa84dad15
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Flow-control interval: [16, 16]
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Trying to continue unpaused monitor
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Restored state OPEN -> JOINED (0)
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Member 0.0 (jan-laptop-asus) synced with group.
      2018-11-22 12:20:38 140737119237888 [Note] WSREP: Shifting JOINED -> SYNCED (TO: 0)
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: New cluster view: global state: 41ccaacd-ee40-11e8-adb7-cbbaa84dad15:0, view# 1: Primary, number of nodes: 1, my index: 0, protocol version 3
      2018-11-22 12:20:38 140737327568832 [Note] WSREP: SST complete, seqno: 0
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'SEQUENCE' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'partition' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: !!!!!!!! UNIV_DEBUG switched on !!!!!!!!!
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Uses event mutexes
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Using Linux native AIO
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Number of pools: 1
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Using SSE2 crc32 instructions
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Initializing buffer pool, total size = 8M, instances = 1, chunk size = 8M
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Completed initialization of buffer pool
      2018-11-22 12:20:38 140736842409728 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Highest supported file format is Barracuda.
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: 128 out of 128 rollback segments are active.
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Creating shared tablespace for temporary tables
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: Setting file './ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: File './ibtmp1' size is now 12 MB.
      2018-11-22 12:20:38 140737327568832 [Note] InnoDB: 5.7.24 started; log sequence number 1633870
      2018-11-22 12:20:38 140736330716928 [Note] InnoDB: Loading buffer pool(s) from /home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data/ib_buffer_pool
      2018-11-22 12:20:38 140736330716928 [Note] InnoDB: Buffer pool(s) load completed at 181122 12:20:38
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_SYS_DATAFILES' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_SYS_TABLESTATS' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_MUTEXES' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_CMP' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_DELETED' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_CMP_RESET' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_LOCK_WAITS' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_TABLESPACES_ENCRYPTION' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_CMPMEM_RESET' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'FEEDBACK' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_INDEX_TABLE' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_CMP_PER_INDEX_RESET' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'user_variables' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_INDEX_CACHE' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_BEING_DELETED' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_DEFAULT_STOPWORD' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_FT_CONFIG' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_SYS_TABLESPACES' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_TABLESPACES_SCRUBBING' is disabled.
      2018-11-22 12:20:38 140737327568832 [Note] Plugin 'INNODB_SYS_SEMAPHORE_WAITS' is disabled.
      2018-11-22 12:20:38 140737327568832 [Warning] /home/jan/mysql/10.2-sst/sql/mysqld: unknown option '--loose-pam-debug'
      2018-11-22 12:20:38 140737327568832 [Note] Server socket created on IP: '127.0.0.1'.
      2018-11-22 12:20:38 140737327568832 [Note] Reading of all Master_info entries succeded
      2018-11-22 12:20:38 140737327568832 [Note] Added new Master_info '' to hash table
      2018-11-22 12:20:38 140737327568832 [Note] /home/jan/mysql/10.2-sst/sql/mysqld: ready for connections.
      Version: '10.2.20-MariaDB-debug-log'  socket: '/home/jan/mysql/10.2-sst/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: REPL Protocols: 9 (4, 2)
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: Assign initial position for certification: 0, protocol version: 4
      2018-11-22 12:20:38 140737234847488 [Note] WSREP: Service thread queue flushed.
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: GCache history reset: 00000000-0000-0000-0000-000000000000:0 -> 41ccaacd-ee40-11e8-adb7-cbbaa84dad15:0
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: Synchronized with group, ready for connections
      2018-11-22 12:20:38 140737226147584 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: (41caec63, 'tcp://0.0.0.0:16002') connection established to 4a881ac4 tcp://127.0.0.1:16005
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: (41caec63, 'tcp://0.0.0.0:16002') turning message relay requesting on, nonlive peers: 
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: declaring 4a881ac4 at tcp://127.0.0.1:16005 stable
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: Node 41caec63 state prim
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: view(view_id(PRIM,41caec63,2) memb {
      	41caec63,0
      	4a881ac4,0
      } joined {
      } left {
      } partitioned {
      })
      2018-11-22 12:20:53 140737127630592 [Note] WSREP: save pc into disk
      2018-11-22 12:20:53 140737119237888 [Note] WSREP: New COMPONENT: primary = yes, bootstrap = no, my_idx = 0, memb_num = 2
      2018-11-22 12:20:53 140737119237888 [Note] WSREP: STATE_EXCHANGE: sent state UUID: 4ad56a24-ee40-11e8-8378-7398a3d647b3
      2018-11-22 12:20:53 140737119237888 [Note] WSREP: STATE EXCHANGE: sent state msg: 4ad56a24-ee40-11e8-8378-7398a3d647b3
      2018-11-22 12:20:53 140737119237888 [Note] WSREP: STATE EXCHANGE: got state msg: 4ad56a24-ee40-11e8-8378-7398a3d647b3 from 0 (jan-laptop-asus)
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: STATE EXCHANGE: got state msg: 4ad56a24-ee40-11e8-8378-7398a3d647b3 from 1 (jan-laptop-asus)
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: Quorum results:
      	version    = 4,
      	component  = PRIMARY,
      	conf_id    = 1,
      	members    = 1/2 (joined/total),
      	act_id     = 0,
      	last_appl. = 0,
      	protocols  = 0/9/3 (gcs/repl/appl),
      	group UUID = 41ccaacd-ee40-11e8-adb7-cbbaa84dad15
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: Flow-control interval: [23, 23]
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: Trying to continue unpaused monitor
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: New cluster view: global state: 41ccaacd-ee40-11e8-adb7-cbbaa84dad15:0, view# 2: Primary, number of nodes: 2, my index: 0, protocol version 3
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: REPL Protocols: 9 (4, 2)
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: Assign initial position for certification: 0, protocol version: 4
      2018-11-22 12:20:54 140737234847488 [Note] WSREP: Service thread queue flushed.
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: Member 1.0 (jan-laptop-asus) requested state transfer from '*any*'. Selected 0.0 (jan-laptop-asus)(SYNCED) as donor.
      2018-11-22 12:20:54 140737119237888 [Note] WSREP: Shifting SYNCED -> DONOR/DESYNCED (TO: 0)
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      2018-11-22 12:20:54 140735475087104 [Note] WSREP: Running: 'wsrep_sst_rsync --role 'donor' --address '127.0.0.1:16007/rsync_sst' --socket '/home/jan/mysql/10.2-sst/mysql-test/var/tmp/mysqld.1.sock' --datadir '/home/jan/mysql/10.2-sst/mysql-test/var/mysqld.1/data/'  --defaults-file '/home/jan/mysql/10.2-sst/mysql-test/var/my.cnf' --defaults-group-suffix '.1'    '' --gtid '41ccaacd-ee40-11e8-adb7-cbbaa84dad15:0' --gtid-domain-id '0''
      2018-11-22 12:20:54 140737226147584 [Note] WSREP: sst_donor_thread signaled with 0
      2018-11-22 12:20:54 140735475087104 [Note] WSREP: Flushing tables for SST...
      2018-11-22 12:20:54 140735475087104 [Note] WSREP: Provider paused at 41ccaacd-ee40-11e8-adb7-cbbaa84dad15:0 (5)
      2018-11-22 12:20:54 140735475087104 [Note] WSREP: Tables flushed.
      2018-11-22 12:20:55 140735475087104 [Note] WSREP: resuming provider at 5
      2018-11-22 12:20:55 140735475087104 [Note] WSREP: Provider resumed.
      2018-11-22 12:20:55 140737119237888 [Note] WSREP: 0.0 (jan-laptop-asus): State transfer to 1.0 (jan-laptop-asus) complete.
      2018-11-22 12:20:55 140737119237888 [Note] WSREP: Shifting DONOR/DESYNCED -> JOINED (TO: 0)
      2018-11-22 12:20:55 140737119237888 [Note] WSREP: Member 0.0 (jan-laptop-asus) synced with group.
      2018-11-22 12:20:55 140737119237888 [Note] WSREP: Shifting JOINED -> SYNCED (TO: 0)
      2018-11-22 12:20:55 140737226147584 [Note] WSREP: Synchronized with group, ready for connections
      2018-11-22 12:20:55 140737226147584 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      2018-11-22 12:20:56 140737127630592 [Note] WSREP: (41caec63, 'tcp://0.0.0.0:16002') turning message relay requesting off
      2018-11-22 12:20:57 140737119237888 [Note] WSREP: 1.0 (jan-laptop-asus): State transfer from 0.0 (jan-laptop-asus) complete.
      2018-11-22 12:20:57 140737119237888 [Note] WSREP: Member 1.0 (jan-laptop-asus) synced with group.
      2018-11-22 12:21:01 140737098880768 [Note] WSREP: killing local connection: 12
      stack_bottom = 0x0 thread_stack 0x49000
      /home/jan/mysql/10.2-sst/sql/mysqld(my_print_stacktrace+0x38)[0x5555564c6930]
      mysys/stacktrace.c:267(my_print_stacktrace)[0x55555653b302]
      vio/viosocket.c:593(vio_close)[0x555555ac0c22]
      sql/sql_class.cc:2494(THD::close_active_vio())[0x555555abebc6]
      sql/sql_class.cc:1810(THD::disconnect())[0x555555a267ef]
      sql/mysqld.cc:2843(close_connection(THD*, unsigned int))[0x555555ce042b]
      sql/wsrep_mysqld.cc:2319(wsrep_close_client_connections(char))[0x555555cebf11]
      sql/wsrep_var.cc:432(wsrep_reject_queries_update(sys_var*, THD*, enum_var_type))[0x555555a4c31c]
      sql/set_var.cc:209(sys_var::update(THD*, set_var*))[0x555555a4e02a]
      sql/set_var.cc:837(set_var::update(THD*))[0x555555a4dc0f]
      sql/set_var.cc:738(sql_set_variables(THD*, List<set_var_base>*, bool))[0x555555b0b9ed]
      sql/sql_parse.cc:4844(mysql_execute_command(THD*))[0x555555b15925]
      sql/sql_parse.cc:8012(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x555555b14f1c]
      sql/sql_parse.cc:7807(wsrep_mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x555555b030b4]
      sql/sql_parse.cc:1820(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x555555b01ab1]
      sql/sql_parse.cc:1377(do_command(THD*))[0x555555c5179c]
      sql/sql_connect.cc:1335(do_handle_one_connection(CONNECT*))[0x555555c5151c]
      sql/sql_connect.cc:1242(handle_one_connection)[0x55555646c9b0]
      nptl/pthread_create.c:463(start_thread)[0x7ffff7f8bf2a]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f)[0x7ffff68f1edf]
      2018-11-22 12:21:02 140737098880768 [Note] WSREP: Rejecting client queries and killing connections due to manual setting
      mysqld: /home/jan/mysql/10.2-sst/include/mysql/psi/mysql_socket.h:738: inline_mysql_socket_send: Assertion `mysql_socket.fd != -1' failed.
      2018-11-22 12:21:20 140737127630592 [Warning] WSREP: last inactive check more than PT1.5S ago (PT18.4314S), skipping check
      2018-11-22 12:21:20 140737098266368 [Note] WSREP: Allowing client queries due to manual setting
      ----------SERVER LOG END-------------
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.